# EzConvert

./: .gitignore  BUILDING_en.md  BUILDING_zh.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SPONSOR.md  build.gradle  gradle.properties  settings.gradle
.androidide/editor/: openedFiles.json
.github/ISSUE_TEMPLATE/: bug_report_en.yml  feature_request.yml  feature_request_en.yml
.github/workflows/: auto-pr.yml  build-on-tag.yml  ci.yml  release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ezlog_mmap.cpp  ffmpeg_wrapper.cpp  ffmpeg_wrapper.h  native-lib.cpp
app/src/main/res/anim/: fade_in.xml  slide_in_left.xml  slide_in_right.xml  slide_out_right.xml
app/src/main/res/color/: switch_thumb_selector.xml  switch_track_selector.xml
app/src/main/res/drawable/: alert_circle.xml  backup.xml  bg_toast.xml  card_background.xml  card_background_enhanced.xml  code_tags.xml  (+42 more)
change_log/: changelog.md  v0.2.0.md  v0.3.0-alpha.md  v0.3.1-alpha.md  v0.3.1.md  v0.3.2-alpha.md  v0.3.4-alpha.md  v0.3.5-alpha.md  v0.4.0-alpha.1.md  v0.4.0-alpha.2.md  v0.4.0-alpha.md  v0.5.1-alpha.md  v0.6.0-alpha.md  v0.7.0-alpha.md  v0.9.0-alpha.md
change_log/v0.0.0/: v0.10.0-alpha.md  v0.10.1-alpha.md  v0.11.0-alpha.md  v0.12.0-alpha.md  v0.13.0-alpha.md  v0.14.0-alpha.md  v0.3.3-alpha.md  v0.3.5-alpha.md  v0.5.0-alpha.md  v0.5.2-alpha.md  v0.6.1-alpha.md  v0.7.0-alpha.md  v0.8.0-alpha.md  v0.8.1-alpha.md
change_log/v1.0.0/: v1.0.0.md
gradle/: libs.versions.toml  versioning.gradle
gradle/wrapper/: gradle-wrapper.properties
(+102 files in other folders)
